--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.8.4",
+    "js-cookie": "^3.0.5",
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
